Process Sonar feedback